[package]
name = "rust_learn"
version = "1.0.0"
authors = [""]

[[bin]]
name = "hello_world"
path = "src/hello_world/main.rs"

[[bin]]
name = "guessing_game"
path = "src/guessing_game/main.rs"

[[bin]]
name = "rectangle"
path = "src/rectangle/main.rs"

[dependencies]
rand = "0.3.14"
